Remove illegal access vm arg